deployments/kustomize/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: testapp
spec:
  selector:
    app: testapp
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
